--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ torchvision==0.15.2
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
+httpx==0.24.1
+starlette==0.27.0
 pillow==10.1.0
 numpy==1.24.3
 scikit-learn==1.3.2
